--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"dependencies": {
+		"@openzeppelin/contracts": "2.3.0",
+		"bignumber": "^1.1.0",
+		"bignumber.js": "^9.0.0",
 		"dotenv": "8.0.0",
 		"truffle": "5.0.29",
-		"truffle-hdwallet-provider": "1.0.15",
-		"@openzeppelin/contracts": "2.3.0"
+		"truffle-hdwallet-provider": "1.0.15"
 	}
 }
