--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"bignumber.js": "^9.0.0",
 		"dotenv": "8.0.0",
 		"truffle": "5.0.29",
+		"truffle-assertions": "^0.9.1",
 		"truffle-hdwallet-provider": "1.0.15"
 	}
 }
