fix: remove Commission smart contract

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,6 @@ PURCHASED_TOKENS_CLAIM_DATE=
 BONUS_TOKENS_CLAIM_DATE=
 REFERRAL_BONUS_PERCENT=
 ETH_FUNDS_WALLET=
+COMMISSION_SC=
 STAFF_ADDR=
 OWNER_ADDR=
