fix: remove Commission smart contract (#5)

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,6 @@ MAX_INVESTOR_CONTRIBUTION_IN_ETH=
 PURCHASED_TOKENS_CLAIM_DATE=
 BONUS_TOKENS_CLAIM_DATE=
 REFERRAL_BONUS_PERCENT=
-ETH_FUNDS_WALLET=
+COMMISSION_SC=
 STAFF_ADDR=
 OWNER_ADDR=
